# Fuel_stat

./: README.md  pyproject.toml
.github/workflows/: django.yml  main.yml
fuel/: Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
fuel/.github/workflows/: main.yml
fuel/fuel/: celery.py  settings.py  urls.py
fuel/statistic/: admin.py  backends.py  imitation.py  models.py  serializers.py  tasks.py  tokens.py  urls.py  views.py
fuel/statistic/management/commands/: bot.py
fuel/statistic/tests/: test_client_views.py  test_user.py
fuel/statistic/tests/fixtures/: fixture_car.json  fixture_firm.json  fixture_fuel.json  fixture_fuelstatistic.json  fixture_refueling.json  fixture_registreduser.json
