[tool.poetry]
name = "fuel-stat"
version = "0.1.0"
description = ""
authors = ["Inctinct <dmitriy.makeychik@mail.ru>"]
readme = "README.md"
packages = [{include = "fuel_stat"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
jwt = "^1.3.1"
six = "^1.16.0"
pyjwt = "^2.6.0"
celery = "^5.2.7"
redis = "^4.5.1"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.0"
flower = "^1.2.0"
pytest = "^7.2.2"
pytest-django = "^4.5.2"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
